--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 @use "sections/index";
 @use "sections/navbar";
 @use "sections/footer";
+@use "sections/documentation";
 @use "sections/intro-section";
 
 .b-custom-divider {
