--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11931,22 +11931,168 @@ textarea.form-control-lg {
   line-height: 2rem;
 }
 
-.sidebar-list-group-item {
-  background: transparent;
-  border: 0;
-  border-radius: 0.5rem;
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  margin-left: 0.5rem;
-  margin-top: 0rem;
-  margin-bottom: 0rem;
+.custom-intro {
+  margin-top: 5rem;
+  margin-bottom: 4rem;
 }
-.sidebar-list-group-item :hover {
+
+.intro-body {
+  height: 100%;
+}
+
+.bdss {
+  background-color: #14253e;
+  background-image: linear-gradient(180deg, rgba(20, 37, 62, 0.6) 0%, rgba(20, 37, 62, 0.6) 20%), radial-gradient(ellipse at top left, rgba(20, 37, 62, 0.5), transparent 25%), radial-gradient(ellipse at top right, rgba(254, 190, 102, 0.5), transparent 25%), radial-gradient(ellipse at center right, rgba(46, 155, 242, 0.5), transparent 25%), radial-gradient(ellipse at center left, rgba(102, 16, 242, 0.5), transparent 25%);
+}
+
+.heading-line::before {
+  content: "";
+  width: 15rem;
+  height: 0.15rem;
+  display: block;
+  margin: 0 auto;
+  background-color: #14253e;
+}
+
+.heading-line::after {
+  content: "";
+  width: 3rem;
+  height: 0.1rem;
+  display: block;
+  padding-top: 0.3rem;
+  margin: 0 auto;
+  background-color: #14253e;
+}
+
+.heading-line-white::before {
+  content: "";
+  width: 15rem;
+  height: 0.15rem;
+  display: block;
+  margin: 0 auto;
+  background-color: #E1F1FF;
+}
+
+.heading-line-white::after {
+  content: "";
+  width: 3rem;
+  height: 0.1rem;
+  display: block;
+  padding-top: 0.3rem;
+  margin: 0 auto;
+  background-color: #E1F1FF;
+}
+
+.grayscale {
+  filter: grayscale(50%);
+}
+.grayscale:hover {
+  box-shadow: 1rem;
+  cursor: pointer;
+  filter: grayscale(0%);
+}
+
+.customHover {
+  color: #2e9bf2;
+  text-decoration: none;
+  align-items: baseline;
+}
+.customHover span {
+  transition: all 0.15s ease;
+  padding-right: 0.25rem;
+  font-size: medium;
+  text-underline-offset: 0.25rem;
+  text-decoration-line: underline;
+}
+.customHover:hover span {
+  padding-right: 0.75rem;
+}
+
+.custom-border-right {
+  border-right: 0.1rem solid #ced4da;
+  height: 100%;
+}
+
+.custom-carousel-item {
+  overflow: hidden;
+  height: 200px;
+}
+.custom-carousel-item img {
+  height: 100%;
+  max-height: 10rem;
+  position: relative;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+}
+
+.masthead-notice {
+  box-shadow: inset 0 -1px 1px rgba(var(--bs-body-color-rgb), 0.15), 0 0.25rem 1.5rem rgba(var(--bs-body-bg-rgb), 0.75);
+}
+
+.menu {
+  background: #14253e;
+}
+.menu li {
+  padding: 0 1rem;
+}
+.menu li a {
+  color: #E1F1FF !important;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.custom-footer {
+  padding-top: 2rem;
+  padding-left: 5rem;
+  background-color: #14253e;
+}
+
+.sidebar {
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5em;
+}
+.sidebar ul {
+  list-style-type: none;
+  font-weight: bold;
+  font-size: medium;
+}
+.sidebar ul ul {
+  font-weight: normal;
+  font-size: small;
+  margin-bottom: 2rem;
+  padding-left: 0.75rem;
+}
+.sidebar ul ul li {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+.sidebar ul ul li a {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.37rem;
+  padding-right: 0.37rem;
+  text-decoration: none;
+}
+.sidebar ul ul li a:hover {
   border-radius: 0.25rem;
   background-color: rgba(20, 37, 62, 0.75);
   color: #E1F1FF;
 }
-.sidebar-list-group-item a {
+
+.sidebar_item {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background: transparent;
+  border: 0;
+  border-radius: 0.5rem;
+}
+.sidebar_item :hover {
+  border-radius: 0.25rem;
+  background-color: rgba(20, 37, 62, 0.75);
+  color: #E1F1FF;
+}
+.sidebar_item a {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.37rem;
@@ -11955,7 +12101,7 @@ textarea.form-control-lg {
   text-decoration: none;
 }
 
-.sidebar-list-group-item-selected {
+.sidebar-item-selected {
   background: transparent;
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -11963,7 +12109,7 @@ textarea.form-control-lg {
   margin-top: 0rem;
   margin-bottom: 0rem;
 }
-.sidebar-list-group-item-selected a {
+.sidebar-item-selected a {
   background-color: rgba(20, 37, 62, 0.75);
   border: 0;
   border-radius: 0.25rem;
@@ -11985,36 +12131,26 @@ textarea.form-control-lg {
   font-weight: bold;
 }
 
-.custom-intro {
+main {
   margin-top: 5rem;
-  margin-bottom: 4rem;
 }
 
-.intro-body {
-  height: 100%;
+.bd-layout {
+  display: grid;
+  grid-template-areas: "sidebar main";
+  grid-template-columns: 1fr 5fr;
+  gap: 1.5rem;
 }
 
-.bdss {
-  background-color: #14253e;
-  background-image: linear-gradient(180deg, #e1f1ff 80%, #14253e 100%), radial-gradient(ellipse at top left, rgba(20, 37, 62, 0.5), transparent 50%), radial-gradient(ellipse at top right, rgba(254, 190, 102, 0.5), transparent 50%), radial-gradient(ellipse at center right, rgba(214, 51, 132, 0.5), transparent 50%), radial-gradient(ellipse at center left, rgba(102, 16, 242, 0.5), transparent 50%);
+.bd-sidebar {
+  grid-area: sidebar;
 }
 
-.menu {
-  background: #14253e;
-}
-.menu li {
-  padding: 0 1rem;
-}
-.menu li a {
-  color: #E1F1FF !important;
-  text-transform: capitalize;
-  font-weight: 600;
-}
-
-.custom-footer {
-  padding-top: 2rem;
-  padding-left: 5rem;
-  background-color: #14253e;
+.condo-bg-image {
+  background-image: url("https://thumb.tildacdn.com/tild3136-3335-4933-a664-633362303464/-/format/webp/61_2.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .b-custom-divider {
