--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -12,10 +12,110 @@
 .bdss {
     background-color: $primary;
     background-image: linear-gradient(180deg,
-    rgba($white, 1) 80%,
-    rgba($primary, 1) 100%),
-    radial-gradient(ellipse at top left    , rgba($primary, 0.5)     , transparent 50%),
-    radial-gradient(ellipse at top right   , rgba($accent-color, 0.5), transparent 50%),
-    radial-gradient(ellipse at center right, rgba($pink, 0.5)        , transparent 50%),
-    radial-gradient(ellipse at center left , rgba($indigo, 0.5)      , transparent 50%);
+            rgba($primary, .6) 00%,
+            rgba($primary, .6) 20%),
+        radial-gradient(ellipse at top left, rgba($primary, 0.5), transparent 25%),
+        radial-gradient(ellipse at top right, rgba($accent-color, 0.5), transparent 25%),
+        radial-gradient(ellipse at center right, rgba($secondary, 0.5), transparent 25%),
+        radial-gradient(ellipse at center left, rgba($indigo, 0.5), transparent 25%);
+}
+
+.heading-line::before {
+    content: "";
+    width: 15rem;
+    height: 0.15rem;
+    display: block;
+    margin: 0 auto;
+    background-color: $primary;
+}
+
+.heading-line::after {
+    content: "";
+    width: 3rem;
+    height: 0.1rem;
+    display: block;
+    padding-top: 0.3rem;
+    margin: 0 auto;
+    background-color: $primary;
+}
+
+
+.heading-line-white::before {
+    content: "";
+    width: 15rem;
+    height: 0.15rem;
+    display: block;
+    margin: 0 auto;
+    background-color: $white;
+}
+
+.heading-line-white::after {
+    content: "";
+    width: 3rem;
+    height: 0.1rem;
+    display: block;
+    padding-top: 0.3rem;
+    margin: 0 auto;
+    background-color: $white;
+}
+
+
+.grayscale {
+
+
+
+    filter: grayscale(50%);
+
+    &:hover {
+        box-shadow: 1rem;
+        cursor: pointer;
+        filter: grayscale(0%);
+    }
+}
+
+
+.customHover {
+    color: $secondary;
+    text-decoration: none;
+    align-items: baseline;
+    ;
+
+    span {
+        transition: all 0.15s ease;
+        padding-right: .25rem;
+        font-size: medium;
+        text-underline-offset: .25rem;
+        text-decoration-line: underline;
+    }
+
+    &:hover {
+        span {
+            padding-right: .75rem;
+        }
+    }
+
+}
+
+.custom-border-right {
+    border-right: 0.1rem solid $gray-400;
+    height: 100%;
+}
+
+.custom-carousel-item {
+
+    overflow: hidden;
+    height: 200px;
+
+    img {
+        height: 100%;
+        max-height: 10rem;
+        position: relative;
+        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+    }
+}
+
+
+.masthead-notice {
+    box-shadow: inset 0 -1px 1px rgba(var(--bs-body-color-rgb), 0.15), 0 0.25rem 1.5rem rgba(var(--bs-body-bg-rgb), 0.75);
 }
